--- a/index.html.html
+++ b/index.html.html
@@ -372,7 +372,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Inventory Management System</h1>
+            <h1>Waldo's Inventory</h1>
             <div>
                 <button id="refreshBtn" class="btn btn-primary">Refresh Data</button>
             </div>
